// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pipe 1`] = `
Object {
  "f": Array [
    Array [
      "type",
      "FOO",
    ],
    Array [
      "value",
      "f1--s-foo",
    ],
  ],
}
`;

exports[`pipe 2`] = `
Object {
  "f": Array [
    Array [
      "type",
      "BAR",
    ],
    Array [
      "value",
      "f1--s-bar",
    ],
  ],
}
`;

exports[`pipe 3`] = `
Object {
  "f": Array [
    Array [
      "type",
      "FOO",
    ],
    Array [
      "value",
      "f2--s-foo",
    ],
  ],
}
`;

exports[`pipe 4`] = `
Object {
  "f": Array [
    Array [
      "type",
      "BAR",
    ],
    Array [
      "value",
      "f1--s-bar",
    ],
  ],
}
`;

exports[`pipe 5`] = `
Object {
  "f": Array [
    Array [
      "type",
      "FLUSH",
    ],
  ],
}
`;

exports[`pipe 6`] = `
Object {
  "f": Array [
    Array [
      "type",
      "BAR",
    ],
    Array [
      "value",
      "f1--s-bar",
    ],
  ],
}
`;

exports[`pipe 7`] = `
Object {
  "f": Array [
    Array [
      "type",
      "FLUSH",
    ],
  ],
}
`;
